fix: correct z-index for search panel in code editor

--- a/src/Shared/Components/CodeEditor/codeEditor.scss
+++ b/src/Shared/Components/CodeEditor/codeEditor.scss
@@ -131,6 +131,10 @@
 
     .cm-panels-top {
         border-bottom: none;
+
+        &:has(.code-editor__search) {
+            z-index: 0;
+        }
     }
 
     // TOOLTIPS
